@@ -17,8 +17,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Document installation using multiple CD/DVDs; update text about using a
     mirror in line with that.
   * Lenny will be version 5.0.
+  * Warn about boot issues when using RAID on the root file system.
 
- -- Frans Pop <fjp@debian.org>  Sat, 08 Mar 2008 19:01:25 +0100
+ -- Frans Pop <fjp@debian.org>  Fri, 14 Mar 2008 10:01:49 +0100
 
 installation-guide (20080211) unstable; urgency=low
 
